# catkit2

./: .flake8  .gitignore  CMakeLists.txt  README.md  environment.yml  install_thirdparty.sh  plot_environment.py  setup.py  start_environment_viewer.py  take_exposure.py  test.py  test_reader.py  test_testbed_client.py  test_testbed_server.py  test_writer.py
benchmarks/: CMakeLists.txt  datastream_latency.cpp  datastream_submit.cpp  latency_histogram.py  timestamp.cpp
catkit2/: CMakeLists.txt  __init__.py  bindings.cpp  config.py  data_streams_core_bindings.cpp  utils.py  version.py
catkit2/base_services/: __init__.py  bmc_deformable_mirror.py  camera.py  deformable_mirror.py
catkit2/datalogging/tests/: test_datalogging.py
catkit2/interfaces/: __init__.py  bmc_dm.py  camera.py  flip_mount.py  newport_xps.py
catkit2/proto/: __init__.py
catkit2/protocol/: __init__.py  client.py  constants.py  log_handler.py  server.py  service.py  service_proxy.py
catkit2/services/: AlliedVision_camera.py
catkit2/services/AlliedVision_camera/: AlliedVision_camera.py
catkit2/services/accufiz_interferometer/: accufiz_interferometer.py
catkit2/services/accufiz_interferometer_sim/: accufiz_interferometer_sim.py
catkit2/services/aim_tti_plp/: aim_tti_plp.py
catkit2/services/aim_tti_plp_device/: aim_tti_plp_device.py
catkit2/services/aimtti_plp_device/: aimtti_plp_device.py
catkit2/services/aimtti_plp_device_sim/: aimtti_plp_device_sim.py
catkit2/services/allied_vision_camera/: allied_vision_camera.py
catkit2/services/andor_camera/: andor_camera.py
catkit2/services/bmc_deformable_mirror/: bmc_deformable_mirror.py
catkit2/services/bmc_deformable_mirror_hardware/: bmc_deformable_mirror_hardware.py
catkit2/services/bmc_deformable_mirror_sim/: bmc_deformable_mirror_sim.py
catkit2/services/bmc_dm/: bmc_dm.py
catkit2/services/bmc_dm_sim/: bmc_dm_sim.py
catkit2/services/camera_sim/: camera_sim.py
catkit2/services/cameras/: zwo_camera.py
catkit2/services/daq/: ni_daq.py  ni_daq_sim.py
catkit2/services/dummy_camera/: dummy_camera.py
catkit2/services/dummy_service/: dummy_service.py
catkit2/services/empty_service/: empty_service.py
catkit2/services/environment_viewer/: environment_viewer.py
catkit2/services/flir_camera/: flir_camera.py
catkit2/services/flir_camera_v2/: flir_camera_v2.py
catkit2/services/hamamatsu_camera/: hamamatsu_camera.py
catkit2/services/hicat_simulator/: hicat_simulator.py
catkit2/services/light/: nkt_superk_sim.py
catkit2/services/motor/: newport_picomotor.py  newport_picomotor_sim.py  newport_xps_q8.py  thorlabs_fw102c.py  thorlabs_mff101.py
catkit2/services/newport_picomotor/: newport_picomotor.py
catkit2/services/newport_picomotor_sim/: newport_picomotor_sim.py
catkit2/services/newport_xps_q8/: newport_xps_q8.py
catkit2/services/newport_xps_q8_sim/: newport_xps_q8_sim.py
catkit2/services/ni_daq/: ni_daq.py
catkit2/services/ni_daq_sim/: ni_daq_sim.py
catkit2/services/nkt_superk/: nkt_superk.py
catkit2/services/nkt_superk_evo/: nkt_superk_evo.py
catkit2/services/nkt_superk_evo_sim/: nkt_superk_evo_sim.py
catkit2/services/nkt_superk_sim/: nkt_superk_sim.py
catkit2/services/nkt_superk_varia/: nkt_superk_varia.py
catkit2/services/nkt_superk_varia_sim/: nkt_superk_varia_sim.py
catkit2/services/ntk_superk_varia/: nkt_superk_varia.py
catkit2/services/oceanoptics_spectrometer/: oceanoptics_spectrometer.py
catkit2/services/oceanoptics_spectrometer_sim/: oceanoptics_spectrometer_sim.py
catkit2/services/omega_ithx_w3/: omega_ithx_w3.py
catkit2/services/omega_ithx_w3_sim/: omega_ithx_w3_sim.py
catkit2/services/pdu/: web_power_switch_sim.py
catkit2/services/safety/: safety_monitor.py
catkit2/services/safety_manual_check/: safety_manual_check.py
catkit2/services/safety_monitor/: safety_monitor.py
catkit2/services/sensor/: thorlabs_cld101x_sim.py  thorlabs_pm_sim.py  thorlabs_tsp01_sim.py
catkit2/services/simple_simulator/: simple_simulator.py
catkit2/simulator/: __init__.py  optical_model.py  simple_optical_model.py  simulated_service.py  simulator.proto  simulator.py
catkit2/testbed/: __init__.py  client.py  distributor.py  experiment.py  log_handler.py  logging.py  protocol.py  server.py  service.py  service_proxy.py  testbed.py  testbed_proxy.py  tracing.py
catkit_bindings/: CMakeLists.txt  bindings.cpp
catkit_core/: CMakeLists.txt  Client.cpp  Client.h  Command.cpp  Command.h  Communcation.cpp  Communication.cpp  Communication.h  Communication.inl  DataStream.cpp  DataStream.h  DataStream.inl  Finally.h  HostName.cpp  HostName.h  Log.cpp  LogForwarder.cpp  LogForwarder.h  LogPublish.cpp  LogPublish.h  LoggingProxy.cpp  LoggingProxy.h  Property.cpp  Property.h  ProtoService.cpp  ProtoService.h  Server.cpp  Server.h  Service.cpp  Service.h  ServiceProxy.cpp  ServiceProxy.h  ServiceState.cpp  ServiceState.h  SharedMemory.cpp  SharedMemory.h  Synchronization.cpp  Synchronization.h  Tensor.cpp  Tensor.h  (+17 more)
catkit_core/include/: DataStream.h  Property.h  Serialization.inl  Service.h
hicat2/: CMakeLists.txt  __main__.py  bindings.cpp  cli_interface.py  config.py  config.yaml  simulator.yml  testbed.py  testbed_server.py
hicat2/interfaces/: __init__.py  camera.py  newport_xps.py
hicat2/protocol/: client.py  constants.py  log_handler.py  server.py  service.py  service_proxy.py
hicat2/simulator/: hicat_optical_model.py  optical_model.py  simulator.py
hicat2/user_interface/: bench_display.py  camera_viewer.py  logging_display.py  main_window.py  toolbar.py
hicat_core/: CMakeLists.txt  Command.cpp  DataStream.cpp  Log.cpp  LogConsole.cpp  LogFile.cpp  LogPublish.cpp  Module.cpp  Property.cpp  Serialization.cpp  Service.cpp
hicat_core/include/: Command.h  DataStream.h  DataStream.inl  HostName.h  Log.h  LogConsole.h  LogFile.h  LogPublish.h  Module.h  Property.h  Service.h  Testbed.h
lib/catkit-core/: CMakeLists.txt  Command.cpp  DataStream.cpp  HostName.cpp  Log.cpp  Module.cpp  Property.cpp
lib/data_streams_core/: CMakeLists.txt  DataStream.cpp  LogFile.cpp  TimeStamp.cpp
(+176 files in other folders)
